--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reach/dialog": "^0.8.5",
     "aws-sdk": "^2.632.0",
     "copy-to-clipboard": "^3.3.1",
+    "mongodb": "^6.2.0",
     "next": "^12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -23,6 +24,9 @@
   "devDependencies": {
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.40",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
     "typescript": "^4.6.2"
   }
 }
